--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 Service:
-  RegionId: cn-hangzhou
+  RegionId: ap-southeast-1
   DeployType: ros
   DeployMetadata:
     SupplierDeployMetadata:
@@ -9,26 +9,22 @@ Service:
           ArtifactVersion: ${Artifact.Artifact_1.ArtifactVersion}
     TemplateConfigs:
       - Name: 单机版
-        Url: 'templates/template.yaml'
-#        TrialType: Trial
+        Url: 'ros_templates/template.yaml'
         AllowedRegions:
-          - cn-beijing
-          - cn-hangzhou
-          - cn-shanghai
+          - ap-southeast-1
   ServiceType: private
   ServiceInfo:
     Locale: zh-CN
     ShortDescription: 2048 demo
-    Image: 'icons/service-logo.png'
+    Image: 'resources/icons/service_logo.png'
     Name: 2048
   ShareType: Public
   ApprovalType: Manual
-#  TrialDuration: 7
 Artifact:
   Artifact_1:
     ArtifactType: File
     ArtifactName: 2048
     Description: 2048
     ArtifactProperty:
-      RegionId: cn-hangzhou
-      Url: 'artifacts/2048.tgz'
+      RegionId: ap-southeast-1
+      Url: 'resources/artifact_resources/file/2048.tgz'
